ChangeLog for Nicotine Plus

Unreleased

TRANSLATIONS
 * Added Lithuanian Translation (Žygimantas)
 
BUGFIXES
 * Fixed Big memory leak with PixbufLoader in Userinfo (call garbage collector) 
 * Fixed large-file (>4GB) file scanning and shares browsing issue


1.2.6
INTERFACE CHANGES
 * Added a GUI for new built-in NowPlaying scripts and new /now command to use
   them. Supported players: Amarok, Rhythmbox, BMPx, XMMS/Infopipe, MPD/mpc.
   An 'other' player option also exists.
 * Added /buddy, /rem, unbuddy commands to Private Chat and Chat Rooms. 
 * The Userinfo Picture file chooser now displays a preview of the image
 * Private Chat does not allow you to send messages while offline. New
   disconnected and reconnected messages appear in the chat log. Another new
   message is displayed if you were sent messages while offline.
 * Users' Shares lists can be saved to disk and then reloaded them, for ease 
   and speed. On *nix, these files will be stored in ~/.nicotine/usershares/
 * Display shares-scanning errors in the Log Window
 * Added Titlebar messages on Private Chat and nick mention in Chat Rooms
 * Disabled: Urgency Hint on highlight (Titlebar flashes, or WM tries to get 
   your attention) Doesn't work very well, disabled for now.
 * Popup a warning message if the Guide cannot be found
 * Added 'Copy all' menu item to Room Status logs and the debug log
 * Also added icons to the Clear log and the Remove Dislike menu items 
 * Enlarged number entry boxes in Transfer Settings
 * Added thread protection to File/Directory Chooser (was getting freezes)
 
SEARCH
 * Search's Close button also "ignores" the search, like the X button the tab.
 * Fixed bug in "Download file(s) to..." causing the path to be corrupted.
 
CONFIG
 * Use a safer method to save the config file. Create 'config.new', move old 
   'config' to 'config.old', rename 'config.new' to 'config' (from 1.1.0pre1)

PACKAGING
 * Added 4 nicotine-plus-??px.png icons 16px, 32px, 64px and 96px. 